--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "husky"
   },
   "devDependencies": {
+    "husky": "9.1.7",
     "typescript": "5.8.3",
     "vite": "6.3.3"
   },
