--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "@commitlint/cli": "19.8.0",
+    "@types/node": "22.15.3",
+    "commitizen": "4.3.1",
+    "commitlint-config-gitmoji": "2.3.1",
+    "cz-customizable": "7.4.0",
     "husky": "9.1.7",
     "typescript": "5.8.3",
     "vite": "6.3.3"
