--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prepare": "husky"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@commitlint/cli": "19.8.0",
     "@types/node": "22.15.3",
     "commitizen": "4.3.1",
