--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "commitlint-config-gitmoji": "2.3.1",
     "cz-customizable": "7.4.0",
     "husky": "9.1.7",
+    "lint-staged": "15.5.1",
     "typescript": "5.8.3",
     "vite": "6.3.3"
   },
