--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     }
   },
   "lint-staged": {
-    "**.{js,ts,cjs,mjs,cts,mts,json,jsonc}": ["biome check --write --no-errors-on-unmatched"]
+    "**/*.{js,ts,cjs,mjs,cts,mts,json,jsonc}": ["biome check --write --no-errors-on-unmatched"]
   },
   "volta": {
     "node": "22.15.0",
