--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cz-customizable": "7.4.0",
     "husky": "9.1.7",
     "lint-staged": "15.5.1",
+    "prettier": "3.5.3",
     "typescript": "5.8.3",
     "vite": "6.3.3"
   },
