--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "scripts": {
     "biome": "biome check .",
     "biome:fix": "biome check --write .",
+    "biome:ci": "biome ci .",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
+    "prettier:ci": "prettier --check --log-level warn .",
     "lint": "pnpm biome && pnpm prettier",
     "lint:fix": "pnpm biome:fix && pnpm prettier:fix",
     "prepare": "husky"
