--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eslint-plugin-xeiculy",
   "type": "module",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "packageManager": "pnpm@10.10.0",
   "description": "XeicuLy's opinionated ESLint rules",
   "author": "XeicuLy",
@@ -15,13 +15,16 @@
   "keywords": ["eslint", "eslint-plugin"],
   "sideEffects": false,
   "exports": {
-    ".": "./dist/index.js"
+    ".": "./dist/index.mjs"
   },
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/index.mjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.mts",
   "files": ["dist"],
   "scripts": {
+    "build": "unbuild",
+    "dev": "unbuild --stub",
+    "release": "changelogen --release --push --publish",
     "biome": "biome check .",
     "biome:fix": "biome check --write .",
     "biome:ci": "biome ci .",
@@ -30,12 +33,14 @@
     "prettier:ci": "prettier --check --log-level warn .",
     "lint": "pnpm biome && pnpm prettier",
     "lint:fix": "pnpm biome:fix && pnpm prettier:fix",
+    "prerelease": "pnpm build && pnpm lint:fix",
     "prepare": "husky"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@commitlint/cli": "19.8.0",
     "@types/node": "22.15.3",
+    "changelogen": "0.6.1",
     "commitizen": "4.3.1",
     "commitlint-config-gitmoji": "2.3.1",
     "cz-customizable": "7.4.0",
@@ -43,7 +48,9 @@
     "lint-staged": "15.5.1",
     "prettier": "3.5.3",
     "typescript": "5.8.3",
+    "unbuild": "3.5.0",
     "vite": "6.3.3",
+    "vite-node": "3.1.2",
     "vitest": "3.1.2"
   },
   "config": {
