--- a/.github/workflows/quality-check.yaml
+++ b/.github/workflows/quality-check.yaml
@@ -38,3 +38,6 @@ jobs:
 
       - name: Execute Prettier
         run: pnpm prettier:ci
+
+      - name: Execute TypeCheck
+        run: pnpm typecheck
