--- a/.github/actions/node-install/action.yaml
+++ b/.github/actions/node-install/action.yaml
@@ -23,8 +23,11 @@ runs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ inputs.node-version }}
+        registry-url: 'https://registry.npmjs.org'
         cache: pnpm
 
     - name: Install dependencies
       shell: bash
       run: pnpm install --frozen-lockfile
+      env:
+        HUSKY: '0'
