--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     "vite-node": "3.1.2",
     "vitest": "3.1.2"
   },
+  "peerDependencies": {
+    "eslint": ">=9.0.0"
+  },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-customizable"
