--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "commitizen": "4.3.1",
     "commitlint-config-gitmoji": "2.3.1",
     "cz-customizable": "7.4.0",
+    "eslint": "9.26.0",
     "husky": "9.1.7",
     "lint-staged": "15.5.1",
     "prettier": "3.5.3",
