:construction_worker: ci: update user configuration in release workflow
ISSUES CLOSED: #31

--- a/.github/workflows/quality-check.yaml
+++ b/.github/workflows/quality-check.yaml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Setup Biome CLI
         uses: biomejs/setup-biome@v2
+        with:
+          version: '1.9.4'
 
       - name: Execute Biome
         run: pnpm biome:ci
