--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -42,8 +42,8 @@ jobs:
 
       - name: Configure Git
         run: |
-          git config --local user.name 'github-actions[bot]'
-          git config --local user.email 'github-actions[bot]@users.noreply.github.com'
+          git config --local user.name 'XeicuLy'
+          git config --local user.email '106128913+XeicuLy@users.noreply.github.com'
 
       - name: Release (auto)
         if: inputs.version_type == 'auto'
