--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@commitlint/cli": "19.8.0",
+    "@types/eslint": "9.6.1",
     "@types/node": "22.15.3",
+    "@typescript-eslint/typescript-estree": "8.31.1",
+    "@typescript-eslint/utils": "8.31.1",
     "changelogen": "0.6.1",
     "commitizen": "4.3.1",
     "commitlint-config-gitmoji": "2.3.1",
@@ -52,7 +55,6 @@
     "typescript": "5.8.3",
     "unbuild": "3.5.0",
     "vite": "6.3.3",
-    "vite-node": "3.1.2",
     "vitest": "3.1.2"
   },
   "peerDependencies": {
