--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
-    "types": ["vitest/globals", "node"],
+    "types": ["node"],
     "strict": true,
     "esModuleInterop": true,
     "skipDefaultLibCheck": true,
