--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@commitlint/cli": "19.8.0",
     "@types/eslint": "9.6.1",
     "@types/node": "22.15.3",
+    "@typescript-eslint/parser": "8.32.1",
     "@typescript-eslint/typescript-estree": "8.31.1",
     "@typescript-eslint/utils": "8.31.1",
     "@vitest/coverage-v8": "3.1.2",
@@ -64,7 +65,9 @@
     "vue-eslint-parser": "10.1.3"
   },
   "peerDependencies": {
-    "eslint": ">=9.0.0"
+    "@typescript-eslint/parser": ">=8.0.0",
+    "eslint": ">=9.0.0",
+    "vue-eslint-parser": ">=10.0.0"
   },
   "config": {
     "commitizen": {
