:wrench: chore: jsonをprettierでformatする

--- a/biome.json
+++ b/biome.json
@@ -51,9 +51,7 @@
   },
   "json": {
     "formatter": {
-      "enabled": true,
-      "lineWidth": 120,
-      "indentStyle": "space"
+      "enabled": false
     },
     "linter": {
       "enabled": true
