--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,7 @@
     "source.organizeImports.biome": "explicit",
     "quickfix.biome": "explicit"
   },
-  "[javascript][javascriptreact][typescript][typescriptreact][json][jsonc][css]": {
+  "[css][javascript][javascriptreact][typescript][typescriptreact]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
